  * Greatly simplify dependency resolution logic
  * The version portion of a Release (version-sourceCount-buildCount)
    is no longer required to begin with a digit.
  * The Release parsing code has been cleaned up to use consistent
    naming, API documentation, and parse error messages
  * An unhandled exception when signing a trove twice with the same key
    has been fixed.

Changes in 0.62.4:
  * Many places where lots of individual db calls were done to collect
    file objects have been collapsed into batched calls (5-10% speedup
    on some operations)
  * Fixed PGP key submission to not use a hidden form element.
  * Changed PGP key submission to use an xmlrpc call instead of
    modifying the database directly.
  * Added methods to change PGP key/user associations, and thereby
    disable a key.
  * Added an index to dependency resolution for a massive improvement
    on local system dependency performance on large updates.
  * Added the ability to get troves without file lists from the local
    database and use that when getting troves through the changeset
    trove source.
  * Previously, dependency resolution could cause duplicate
    trovesource entries.  This no longer occurs.
  * :lib and :devellib automatically have lib=%(lib)s install buckets.
  * A user management bug in the repository has been fixed.
    Previously, if you deleted a group followed by the user with the
    same name of the group, an unhandled exception occurred.
  * Looking up changeset cache entries in the cache database no longer
    uses exception handling to determine when database entries are
    invalid or stale.
  * The EnforceSonameBuildRequirements policy now recognizes :devellib
    as well as :devel components in buildRequires.

Changes in 0.62.3:
  * Don't link troves to groups when the branch has changed
  * Link new troves to collections (and new collections to old troves) when 
    a trove isn't installed but a suitable replacement (meaning on the same